docs/versioned_docs/version-2.5.0/widgets/vertical-divider.md
---
id: vertical-divider
title: Vertical Divider
---
# Vertical Divider

Vertical Divider widget is used to add vertical separator between components.

<div style={{textAlign: 'center'}}>

<img className="screenshot-full" src="/img/widgets/vertical-divider/vertical-divider.png" alt="ToolJet - Widget Reference - Vertical divider" />

</div>

## General
### Tooltip

A Tooltip is often used to specify extra information about something when the user hovers the mouse pointer over the widget.

Under the <b>General</b> accordion, you can set the value in the string format. Now hovering over the widget will display the string as the tooltip.

<div style={{textAlign: 'center'}}>

<img className="screenshot-full" src="/img/tooltip.png" alt="ToolJet - Widget Reference - Vertical divider" width="300" />

</div>

## Layout

<div style={{textAlign: 'center'}}>

<img className="screenshot-full" src="/img/widgets/divider/layout1.png" alt="ToolJet - Widget Reference - Vertical divider" width="400" />

</div>

| properties      | description |
| ----------- | ----------- |
| Show on Desktop |  This property have toggle switch. If enabled, the divider will display in the desktop view else it will not appear. |
| Show on Mobile |  This property have toggle switch. If enabled, the divider will display in the mobile view else it will not appear. |

## Styles

<div style={{textAlign: 'center'}}>

<img className="screenshot-full" src="/img/widgets/divider/styles1.png" alt="ToolJet - Widget Reference - Vertical divider" width="400" />

</div>

| properties      | description |
| ----------- | ----------- |
| Divider Color |  It is used to set the color of the divider. Use hex code to set the background color. |
| Visibility |  This property is used to set the visibility of the divider. The property accepts Boolean value. |


:::info
Any property having `Fx` button next to its field can be **programmatically configured**.
:::

## Exposed variables

There are currently no exposed variables for the component.

## Component specific actions (CSA)

There are currently no CSA (Component-Specific Actions) implemented to regulate or control the component.
